--- a/Frontend/src/components/sign-up.css
+++ b/Frontend/src/components/sign-up.css
@@ -1,10 +1,10 @@
 html,
 body {
   height: 100%;
-  overflow: hidden; /* Prevent scrolling on sign-in page */
+  overflow: hidden; /* Prevent scrolling on sign-up page */
 }
 
-.form-signin {
+.form-signup {
   max-width: 430px;
   padding: 15px;
   height: 100vh;
@@ -13,7 +13,7 @@ body {
   justify-content: center;
 }
 
-.form-signin form {
+.form-signup form {
   background-color: #fff;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -23,34 +23,35 @@ body {
   padding: 2rem;
 }
 
-.form-signin .form-floating:focus-within {
+.form-signup .form-floating:focus-within {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
+.form-signup input[type="email"] {
+  margin-bottom: -8px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="text"] {
-  margin-bottom: 10px;
+.form-signup input[type="text"] {
+  margin-bottom: -8px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
+.form-signup input[type="password"] {
+  margin-bottom: -8px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.form-signin h1 {
-  color: var(--brand-secondary);
+.form-signup h1 {
+  color: var(--brand-primary); /* Different color from sign-in */
   font-weight: 600;
+  margin-top: -7%;  
 }
 
-.form-signin .btn-primary {
+.form-signup .btn-primary {
   margin-top: 10px;
   font-weight: 500;
   padding: 12px;
@@ -66,4 +67,4 @@ body {
   max-width: 200px;
   height: auto;
   margin: 0 auto;
-}
+} 
